@@ -3,6 +3,9 @@ TODO list for line-graphing
 DEADLINES
 
 DESIGN
+- same or different colors for saved lines? if different, how to choose colors?
+- does the origin need to be labeled (0,0)? if so, how?
+- if "Graph lines" is unchecked, how does this affect controls that deal with lines on graph? are they disabled?
 
 HIGH
 - reuse spinner buttons from fractions, see SpinnerButtonNode
