@@ -2,7 +2,6 @@
 package edu.colorado.phet.linegraphing.intro.model;
 
 import java.awt.geom.Point2D;
-import java.util.ArrayList;
 
 import edu.colorado.phet.common.phetcommon.model.Resettable;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
@@ -15,22 +14,22 @@ import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTra
  */
 public class IntroModel implements Resettable {
 
+    private static final SlopeInterceptLine DEFAULT_LINE = new SlopeInterceptLine( 5, 5, 1 );
+
     public final ModelViewTransform mvt;
     public final Property<SlopeInterceptLine> line;
     public final SlopeInterceptLine yEqualsXLine, yEqualsNegativeXLine;
-    public final Property<ArrayList<SlopeInterceptLine>> savedLines;
     public final LineGraph graph;
 
     public IntroModel() {
         mvt = ModelViewTransform.createOffsetScaleMapping( new Point2D.Double( 0, 0 ), 28, -28 ); // y is inverted
-        line = new Property<SlopeInterceptLine>( new SlopeInterceptLine( 5, 5, 0 ) );
+        line = new Property<SlopeInterceptLine>( DEFAULT_LINE );
         yEqualsXLine = new SlopeInterceptLine( 1, 1, 0 );
         yEqualsNegativeXLine = new SlopeInterceptLine( 1, -1, 0 );
-        savedLines = new Property<ArrayList<SlopeInterceptLine>>( new ArrayList<SlopeInterceptLine>() );
         graph = new LineGraph( -10, 10, -10, 10 );
     }
 
     public void reset() {
-        savedLines.set( new ArrayList<SlopeInterceptLine>() );
+        line.reset();
     }
 }
